--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -1,7 +1,107 @@
 ---
-import { getCollection } from "astro:content";
+import { getCollection, getEntry } from "astro:content";
+import { marked } from "marked";
+marked.use({ mangle: false, headerIds: false });
 
-
-export const docs = await getCollection("docs");
+const exams = (await getCollection("exams")).map((entry) => {
+  return {
+    type: "exam",
+    title: entry.data.title,
+    date: entry.data.date,
+    content: entry.data.content,
+  };
+});
+const homeworks = (
+  await getCollection("docs", (entry) => entry.id.startsWith("homework"))
+).flatMap((entry) => {
+  return [
+    {
+      slug: entry.slug,
+      type: "homework release",
+      title: entry.data.title,
+      date: entry.data.release,
+    },
+    {
+      slug: entry.slug,
+      type: "homework due",
+      title: entry.data.title,
+      date: entry.data.due,
+    },
+  ];
+});
+const lectures = (
+  await getCollection("docs", (entry) => entry.id.startsWith("lecture"))
+).map((entry) => {
+  return {
+    slug: entry.slug,
+    type: "lecture",
+    title: entry.data.title,
+    date: entry.data.date,
+    readings: entry.data.readings,
+    notes: entry.data.notes,
+  };
+});
+// merge the three above arrays and sort them by date
+const events = [...exams, ...homeworks, ...lectures].sort(
+  (a, b) => +a.date! - +b.date!
+);
 ---
-Stuff
+
+<table>
+  <thead>
+    <tr>
+      <th>Type</th>
+      <th>Date</th>
+      <th>Topic</th>
+      <th>Content</th>
+      <th>Notes</th>
+    </tr>
+  </thead>
+  <tbody>
+    {
+      events.map((event) => (
+        <tr>
+          <td>{event.type}</td>
+          <td>
+            {event.date?.toLocaleDateString("en-US", {
+              weekday: "short",
+              month: "short",
+              day: "numeric",
+              year: "numeric",
+            })}
+          </td>
+          <td>
+            {event.type === "homework release" ||
+            event.type === "homework due" ? (
+              // @ts-expect-error
+              <a href={`/${event.slug}/`}>{event.title}</a>
+            ) : (
+              event.title
+            )}
+          </td>
+          <td>
+            {event.type === "exam" && event.content}
+            {event.readings && (
+              <ul>
+                {event.readings.map((reading) => (
+                  <li>
+                    <a href={reading.link}>{reading.name}</a>
+                    {reading.grad_only && <span title="grad only">🧑‍🎓</span>}
+                    {reading.optional && <span title="not on quiz">📵</span>}
+                  </li>
+                ))}
+              </ul>
+            )}
+          </td>
+          <td>{event.notes && <Fragment set:html={marked(event.notes)} />}</td>
+        </tr>
+      ))
+    }
+  </tbody>
+</table>
+
+<style>
+  ul {
+    padding-left: 0.5rem;
+  }
+</style>
