--- a/src/overrides.css
+++ b/src/overrides.css
@@ -10,11 +10,5 @@
 }
 
 :root:not([data-has-toc]):where([data-has-sidebar]) {
-  .main-pane {
-    width: 100%;
-  }
-  .container {
-    margin-inline: 0px;
-    max-width: 100%;
-  }
+  --sl-content-width: 100%;
 }
