--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -68,6 +68,7 @@ const events = [...exams, ...homeworks, ...lectures].sort(
           <td>
             {event.type === "homework release" ||
             event.type === "homework due" ? (
+              // @ts-expect-error
               <a href={`/${event.slug}/`}>{event.title}</a>
             ) : (
               event.title
