--- a/src/overrides.css
+++ b/src/overrides.css
@@ -20,3 +20,7 @@
 :root:not([data-has-toc]):where([data-has-sidebar]) {
   --sl-content-width: 100%;
 }
+
+html[data-theme="dark"] .sl-markdown-content img[src$="svg"] {
+  filter: invert(93%) hue-rotate(180deg);
+}
