clarify schedule fixes #26

--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -52,7 +52,7 @@ const events = [...exams, ...homeworks, ...lectures].sort(
 <span class="action primary" id="jumpToDateButton">Jump to Nearest Date</span>
 <div class="not-content ml-4 flex items-center sm:ml-0 sm:justify-center">
   <table class="border-separate border-spacing-y-2 text-sm">
-    <thead class="sr-only">
+    <thead>
       <tr>
         <th>Type</th>
         <th>Date</th>
