add notes to schedule, add youtube video to hw1

--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -22,12 +22,14 @@ const homeworks = (
       type: "homework release",
       title: entry.data.title,
       date: localizeTime(entry.data.release),
+      notes: entry.data.notes,
     },
     {
       slug: entry.slug,
       type: "homework due",
       title: entry.data.title,
       date: localizeTime(entry.data.due),
+      notes: entry.data.notes,
     },
   ];
 });
